reddit should always be all lowercase

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
 
-    <string name="app_name">Fetchit for Reddit</string>
+    <string name="app_name">Fetchit for reddit</string>
     <string name="action_settings">Settings</string>
     
     <string name="empty"></string>
